# serializer version: 1
# name: test_replace_rich_text_tokens_replaces_code_block_with_info
  '''
  
  <div class="rich-text-code">
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code misago-rich-text-code="Example string">Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_info_and_syntax
  '''
  
  <div class="rich-text-code">
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Example string
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code misago-rich-text-code="Example string, syntax: php">Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_code_block_with_syntax
  '''
  
  <div class="rich-text-code">
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code misago-rich-text-code="php">Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_minimal_code_block
  '''
  
  <div class="rich-text-code">
    <div class="rich-text-code-header">
      <div class="rich-text-code-info">
        
          Code
        
      </div>
      
        <button
          type="button"
          class="rich-text-code-copy-btn d-js-block"
        >
          Copy
        </button>
      
    </div>
    <pre><code misago-rich-text-code="">Hello world!</code></pre>
  </div>
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <div class="rich-text-quote-info">
          Quote
        </div>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_info
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <div class="rich-text-quote-info">
          Hello world
        </div>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Hello world">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_missing_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <span class="rich-text-quote-avatar">
          <img src="blank-avatar.png" alt="Anonymouse">
        </span>
        <div class="rich-text-quote-info">
          <span class="rich-text-quote-header-link">Anonymouse</span>
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span class="rich-text-quote-header-timestamp">#1234</span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn">
          <span class="material-icon">arrow_forward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Anonymouse, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_other_thread_anonymous_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        
          <a
            class="rich-text-quote-avatar"
            href="/u/user/13/"
          >
            <img
              srcset="http://dummyimage.com/100/100"
              src="http://dummyimage.com/100/100"
              alt="User"
            >
          </a>
        
        <div class="rich-text-quote-info">
          
          
            <a href="/u/user/13/" class="rich-text-quote-header-link">User</a>
          
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-long"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
          >
            May 7, 2022
          </span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-short"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
            misago-timestamp-format="short"
          >
            May 2022
          </span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn" misago-scroll-to="#post-1234">
          <span class="material-icon">arrow_upward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="User, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_other_thread_invisible_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <span class="rich-text-quote-avatar">
          <img src="blank-avatar.png" alt="Anonymouse">
        </span>
        <div class="rich-text-quote-info">
          <span class="rich-text-quote-header-link">Anonymouse</span>
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span class="rich-text-quote-header-timestamp">#1234</span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn">
          <span class="material-icon">arrow_forward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Anonymouse, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_other_thread_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        
          <span class="rich-text-quote-avatar">
            <img src="blank-avatar.png" alt="Starter">
          </span>
        
        <div class="rich-text-quote-info">
          
          
            <span class="rich-text-quote-header-link">Starter</span>
          
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-long"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
          >
            May 7, 2022
          </span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-short"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
            misago-timestamp-format="short"
          >
            May 2022
          </span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn" misago-scroll-to="#post-1234">
          <span class="material-icon">arrow_upward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Starter, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_same_thread_anonymous_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        
          <span class="rich-text-quote-avatar">
            <img src="blank-avatar.png" alt="Starter">
          </span>
        
        <div class="rich-text-quote-info">
          
          
            <span class="rich-text-quote-header-link">Starter</span>
          
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-long"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
          >
            May 7, 2022
          </span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-short"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
            misago-timestamp-format="short"
          >
            May 2022
          </span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn" misago-scroll-to="#post-1234">
          <span class="material-icon">arrow_upward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Starter, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_same_thread_invisible_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        <span class="rich-text-quote-avatar">
          <img src="blank-avatar.png" alt="Anonymouse">
        </span>
        <div class="rich-text-quote-info">
          <span class="rich-text-quote-header-link">Anonymouse</span>
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span class="rich-text-quote-header-timestamp">#1234</span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn">
          <span class="material-icon">arrow_forward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="Anonymouse, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_quote_with_same_thread_user_post
  '''
  
  <aside class="rich-text-quote">
    <div class="rich-text-quote-header">
      
        
          <a
            class="rich-text-quote-avatar"
            href="/u/user/13/"
          >
            <img
              srcset="http://dummyimage.com/100/100"
              src="http://dummyimage.com/100/100"
              alt="User"
            >
          </a>
        
        <div class="rich-text-quote-info">
          
          
            <a href="/u/user/13/" class="rich-text-quote-header-link">User</a>
          
          <span class="rich-text-quote-header-separator">&bull;</span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-long"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
          >
            May 7, 2022
          </span>
          <span
            class="rich-text-quote-header-timestamp rich-text-quote-header-timestamp-short"
            title="May 7, 2022, 9:37 p.m."
            misago-timestamp="2022-05-07T21:37:15+00:00"
            misago-timestamp-format="short"
          >
            May 2022
          </span>
        </div>
        <a href="/post/1234/" class="rich-text-quote-btn" misago-scroll-to="#post-1234">
          <span class="material-icon">arrow_upward</span>
        </a>
      
    </div>
    <blockquote class="rich-text-quote-body" misago-rich-text-quote="User, post: 1234">
      
  <p>Hello world!</p>
  
    </blockquote>
  </aside>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Hidden message
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body" misago-rich-text-spoiler="">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_spoiler_with_custom_info
  '''
  
  <details class="rich-text-spoiler">
    <summary class="rich-text-spoiler-header">
      <div class="rich-text-spoiler-info">
        Lorem ipsum
      </div>
      <div class="rich-text-spoiler-toggle">
        toggle
      </div>
    </summary>
    <div class="rich-text-spoiler-body" misago-rich-text-spoiler="Lorem ipsum">
      
  <p>Hello world!</p>
  
    </div>
  </details>
  
  '''
# ---
# name: test_replace_rich_text_tokens_replaces_youtube_video
  '''
  
  <div
    class="rich-text-video-iframe rich-text-video-youtube"
    misago-rich-text-youtube="https://www.youtube.com/watch?vQzfXag4r7Vo"
  >
    <iframe
      loading="lazy"
      src="https://www.youtube.com/embed/QzfXag4r7Vo"
      title="YouTube video player"
      frameborder="0"
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
      referrerpolicy="strict-origin-when-cross-origin"
      allowfullscreen
    ></iframe>
  </div>
  '''
# ---
